Added jumping into next sites feature.